--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,125 @@
-playwright 
-scrapegraphai==0.9.0b7 
-nest_asyncio
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.4.0
+appnope==0.1.4
+astor==0.8.1
+asttokens==2.4.1
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
+dataclasses-json==0.6.7
+debugpy==1.8.5
+decorator==5.1.1
+diskcache==5.6.3
+distro==1.9.0
+duckdb==1.0.0
+et-xmlfile==1.1.0
+executing==2.1.0
+Faker==19.13.0
+fastjsonschema==2.20.0
+fonttools==4.53.1
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
+idna==3.8
+ipykernel==6.29.5
+ipython==8.27.0
+jedi==0.19.1
+Jinja2==3.1.4
+jiter==0.5.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kiwisolver==1.4.6
+langchain==0.3.0
+langchain-community==0.3.0
+langchain-core==0.3.0
+langchain-openai==0.2.0
+langchain-text-splitters==0.3.0
+langsmith==0.1.121
+llama_cpp_python==0.2.90
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+mysql-connector-python==9.0.0
+mysqlclient==2.2.4
+narwhals==1.6.2
+nbformat==5.10.4
+nest-asyncio==1.6.0
+numpy==1.26.4
+openai==1.43.0
+openpyxl==3.1.5
+orjson==3.10.7
+packaging==24.1
+pandas==1.5.3
+pandasai==2.2.14
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.2.2
+plotly==5.24.0
+prompt_toolkit==3.0.47
+protobuf==5.28.0
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==17.0.0
+pydantic==2.9.1
+pydantic-settings==2.5.2
+pydantic_core==2.23.3
+pydeck==0.9.1
+Pygments==2.18.0
+PyMySQL==1.1.1
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+regex==2024.7.24
+requests==2.32.3
+rich==13.8.0
+rpds-py==0.20.0
+scipy==1.14.1
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.32
+sqlglot==25.20.1
+sqlglotrs==0.2.12
+stack-data==0.6.3
+streamlit==1.38.0
+tabulate==0.9.0
+tenacity==8.5.0
+tiktoken==0.7.0
+toml==0.10.2
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+wcwidth==0.2.13
+yarl==1.9.7
